<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tab2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="butConnexion">Connexion</string>
    <string name="butSit">Sit</string>
    <string name="butStand">Stand</string>
    <string name="butAnimation">Animation</string>
    <string name="butSuiviVisage">Suivi du visage</string>
    <string name="butViens">Viens</string>
    <string name="butArret">Arret</string>
    <string name="textRecoVocale">Reconnaissance Vocale</string>
    <string name="textIP">Entrez l\'adresse IP</string>

</resources>
